# static_avoidance_KUUVe

./: CMakeLists.txt  README.md  package.xml
include/: static_avoidance.h
launch/: launch (copy).launch  launch.launch  launch_car.launch  static_avoidance_lidar.launch  static_preliminary.launch
launch/box_filter/: box_filter.yaml  box_filter_left.yaml  box_filter_main.yaml  box_filter_raw.yaml  box_filter_raw_test.yaml  box_filter_right.yaml
msg/: AckermannDrive.msg
src/: static_avoidance 26.cpp  static_avoidance.cpp  static_avoidance_26.cpp  static_avoidance_28.cpp  static_avoidance_3.cpp  static_avoidance_car.cpp  static_avoidance_simple.cpp  static_avoidance_simple_1.cpp  static_avoidance_test.cpp
